2008-09-19  Michael Snyder  <msnyder@vmware.com>

	* record.c (trivial): Fix two commas in a comment.

	* record.c (record_wait): On end of record log, return
	TARGET_WAITKIND_NO_HISTORY and let infrun decide what to do.

2008-09-19  Hui Zhu  <teawater@gmail.com>

	* record.c (record_wait): Fix the bug of forware step after
	reverse step.
	Make debug message more clean.
	Remove variable record_list_status.

	* i386-tdep.c (i386_record): Fix the bug of "0x80 ... 0x83".

2008-09-15  Michael Snyder  <msnyder@vmware.com>

	* infrun.c (proceed): No need to singlestep over a breakpoint
	when resuming in reverse.

2008-09-11  Hui Zhu  <teawater@gmail.com>

	* record.c (record_resume): Change
	"record_ops.beneath->to_resume" to "record_beneath_to_resume".

2008-09-09  Hui Zhu  <teawater@gmail.com>

	* i386-tdep.c (i386_record): Record the memory change of FP instructions.

2008-09-07  Hui Zhu  <teawater@gmail.com>

	* record.c (record_wait): Add code to deal with record_first.

2008-09-06  Michael Snyder  <msnyder@vmware.com>

	* record-linux.c: Comment and message string cleanup.
	* record.c: Comment and message string cleanup.
	Add some function header comments.

2008-09-04  Michael Snyder  <msnyder@vmware.com>

	* infrun.c (handle_inferior_event): Revert one change, in the
	context of comment "We are at the start of a different line".
	This code finds the start of the line while stepping.

2008-09-01  Hui Zhu  <teawater@gmail.com>

	Record target will not record the memory change of
	instruction if it use segment registers.

	* i386-tdep.c (i386_record_lea_modrm): Make debug message
	more clear. (i386_record): Record target will not record the
	memory change of instruction if it use segment registers.

	Make record target not work with inferior in non-stop mode
	(non-stop).

	* record.c (record_open): If non_stop is true (in non-stop
	mode), output error.

	Make record target not work with GNU/Linux inferior in
	asynchronous mode (linux-async).
